2005-12-17 Oliver Brakmann <oliverbrakmann@users.berlios.de>

	* profiles/libprometheus.bash.in: Fixed calls to `usage_error'.
	* etc/REFERENCE.pkg: Corrected mention of default build dir.
	* profiles/libprometheus.bash.in: Fixed setting `package_builddir'
	  to a wrong value.
	* profiles/libprometheus.bash.in: Fixed a call to `get_deps' with a
	  missing "mode" parameter.
	* profiles/libprometheus.bash.in: Fixed positional parameters in
	  privilege handling functions.
	* profiles/libprometheus.bash.in: `get_compression_suffix' is called
	  `get_suffix' nowadays.
	* profiles/lfs-6.1/expect: Added a missing quote.
	* scripts/pkginfo.in: Fixed a bug in the `query_all' function.

2005-12-16 Oliver Brakmann <oliverbrakmann@users.berlios.de>

	* etc/prometheus.conf.in: Removed unused config variables.
	* scripts/pkgadd.in: Corrected call to `get_dependencies'.

2005-12-14 Oliver Brakmann <oliverbrakmann@users.berlios.de>

	* profiles/lfs-6.1/*.pkg: Removed the .pkg extension from the profiles.

2005-12-11 Oliver Brakmann <oliverbrakmann@users.berlios.de>

	* scripts/libprometheus.bash.in, scripts/pkgrm.in, scripts/pkgbuild.in,
	  scripts/pkgcheck.in, scripts/pkgget.in, scripts/pkgunpack.in,
	  scripts/pkginstall.in: Rewrote privilege handling.

2005-12-10 Oliver Brakmann <oliverbrakmann@users.berlios.de>

	* scripts/pkginstall.in: Rewrote parts to use the new install-log/
	  reroot setup.
	* scripts/libprometheus.bash.in, scripts/pkgget.in, scripts/pkgrm.in:
	  Cleaned up `source_profile' invocations, other cleanups.
	* scripts/pkginfo.in: Removed occurences of .pkg extensions.

2005-12-04 Oliver Brakmann <oliverbrakmann@users.berlios.de>

	* profiles/lfs-6.1/lfs.pkg: Simplified checks for existing lfs user and
	  group.

2005-12-03 Oliver Brakmann <oliverbrakmann@users.berlios.de>

	* scripts/libprometheus.bash.in: Removed dependency on `which'.
	* scripts/pkgadd.in: Completed move of helper scripts to
	  /usr/lib/prometheus.