@@ -200,9 +200,9 @@ error "installation of $name failed"
 # Remove build directory.
 if [[ "$leavefiles" != yes ]]; then
 	echo
-	echo "Removing build directory: \`$package_builddir'..."
+	echo "Removing build directory: \`$directory'..."
 	rm -r "$package_builddir" ||
-	warning "could not remove \`$package_builddir'"
+	warning "could not remove \`$directory'"
 fi
 
 finish
